<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:src="@drawable/page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pickup_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/save_invoice_type"
        android:textColor="#646464"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAd2" />

    <ImageView
        android:id="@+id/ivAd2"
        android:layout_width="1080dp"
        android:layout_height="380dp"
        android:src="@drawable/page_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo2" />

    <Button
        android:id="@+id/btn_paper_invoice"
        style="@style/Btn_Dialog_01"
        android:layout_width="@dimen/receipt_component_size"
        android:layout_height="@dimen/receipt_component_size_height"
        android:layout_centerVertical="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_large_orange_circle_pressed"
        android:text="@string/paper_invoice"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pickup_method" />

    <EditText
        android:id="@+id/et_paper_invoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_paper_invoice"
        android:layout_alignStart="@id/btn_paper_invoice"
        android:layout_alignEnd="@id/btn_paper_invoice"
        android:layout_marginTop="15dp"
        android:background="@drawable/radius_edittext"
        android:editable="false"
        android:gravity="center"
        android:hint="@string/print_now"
        android:padding="8dp"
        android:textColor="#555"
        android:textColorHint="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@id/btn_paper_invoice"
        app:layout_constraintStart_toStartOf="@id/btn_paper_invoice"
        app:layout_constraintTop_toBottomOf="@id/btn_paper_invoice" />

    <Button
        android:id="@+id/btn_cloud_invoice"
        style="@style/Btn_Dialog_01"
        android:layout_width="@dimen/receipt_component_size"
        android:layout_height="@dimen/receipt_component_size_height"
        android:layout_centerVertical="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_large_orange_circle"
        android:text="@string/cloud_invoice"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/btn_paper_invoice"
        app:layout_constraintTop_toBottomOf="@+id/tv_pickup_method" />

    <EditText
        android:id="@+id/et_cloud_invoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_paper_invoice"
        android:layout_alignStart="@id/btn_paper_invoice"
        android:layout_alignEnd="@id/btn_paper_invoice"
        android:layout_marginTop="15dp"
        android:background="@drawable/radius_edittext"
        android:editable="false"
        android:gravity="center"
        android:hint="@string/et_choose_cloud_invoice_type"
        android:padding="8dp"
        android:textColor="#555"
        android:textColorHint="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_cloud_invoice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_cloud_invoice"
        app:layout_constraintTop_toBottomOf="@+id/btn_cloud_invoice" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_receipt_module"
        android:layout_width="1130dp"
        android:layout_height="450dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_paper_invoice">

        <Button
            android:id="@+id/btn_memberCarrier"
            style="@style/Btn_Dialog_01"
            android:layout_width="@dimen/receipt_component_size"
            android:layout_height="@dimen/receipt_component_size_height"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_btn_large_orange_circle"
            android:text="@string/memberCarrier"
            android:textSize="48sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_vehicle"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_vehicle"
            style="@style/Btn_Dialog_01"
            android:layout_width="@dimen/receipt_component_size"
            android:layout_height="@dimen/receipt_component_size_height"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_large_orange_circle"
            android:text="@string/vehicle"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_donate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_memberCarrier"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_donate"
            style="@style/Btn_Dialog_01"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/receipt_component_size_height"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_large_orange_circle"
            android:text="@string/donate_code"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_vehicle"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_donate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_donate"
            android:layout_alignStart="@+id/btn_donate"
            android:layout_alignEnd="@+id/btn_donate"
            android:layout_marginTop="15dp"
            android:background="@drawable/radius_edittext"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/scanDonateNo"
            android:padding="8dp"
            android:textColor="#555"
            android:textColorHint="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_donate"
            app:layout_constraintStart_toStartOf="@+id/btn_donate"
            app:layout_constraintTop_toBottomOf="@+id/btn_donate" />

        <EditText
            android:id="@+id/et_vehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_vehicle"
            android:layout_alignStart="@+id/btn_vehicle"
            android:layout_alignEnd="@+id/btn_vehicle"
            android:layout_marginTop="15dp"
            android:background="@drawable/radius_edittext"
            android:editable="false"
            android:gravity="center"
            android:hint="@string/scanVehicle"
            android:padding="8dp"
            android:textColor="#555"
            android:textColorHint="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_vehicle"
            app:layout_constraintStart_toStartOf="@+id/btn_vehicle"
            app:layout_constraintTop_toBottomOf="@+id/btn_vehicle" />

        <ImageButton
            android:id="@+id/ib_vehicle_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/et_vehicle"
            app:layout_constraintEnd_toEndOf="@+id/btn_vehicle"
            app:layout_constraintTop_toTopOf="@+id/et_vehicle"
            app:srcCompat="@drawable/icon_close" />

        <ImageButton
            android:id="@+id/ib_donate_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/et_donate"
            app:layout_constraintEnd_toEndOf="@+id/btn_donate"
            app:layout_constraintTop_toTopOf="@+id/et_donate"
            app:srcCompat="@drawable/icon_close" />

        <ImageView
            android:id="@+id/iv_member_carrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_memberCarrier"
            app:layout_constraintStart_toStartOf="@+id/btn_memberCarrier"
            app:layout_constraintTop_toBottomOf="@+id/btn_memberCarrier" />

        <TextView
            android:id="@+id/tv_cloud_invoice_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/choose_cloud_invoice_type"
            android:textColor="#646464"
            android:textSize="48sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/is_enable_uniform_invoice"
        android:textColor="#646464"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_receipt_module" />

    <Button
        android:id="@+id/btn_uniform_invoice_no"
        android:layout_width="300dp"
        android:layout_height="102dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:text="否"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_uniform_invoice_yes"
        android:layout_width="300dp"
        android:layout_height="102dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="180dp"
        android:background="@drawable/btn_selector_pressed"
        android:text="是"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/et_tax_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/radius_edittext"
        android:editable="false"
        android:gravity="center"
        android:hint="@string/add_tax_id"
        android:padding="8dp"
        android:textColor="#555"
        android:textColorHint="@color/black"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_uniform_invoice_yes"
        app:layout_constraintStart_toStartOf="@+id/btn_uniform_invoice_yes"
        app:layout_constraintTop_toBottomOf="@+id/btn_uniform_invoice_yes" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="350dp"
            android:background="@drawable/selector_btn_orange_circle"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="200dp"
            android:background="@drawable/selector_btn_alert_confirm"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:background="@drawable/selector_btn_orange_circle"
            android:text="@string/add_more"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintStart_toEndOf="@+id/btn_confirm"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />


        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/inorout_bottom"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
